fix overflow

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,6 @@ body {
 input::placeholder {
     text-align: right;
     font-style: italic;
-    overflow: visible;
 }
 
 ol,
@@ -205,7 +204,7 @@ label {
 }
 
 .newsletter div {
-    margin: 5px;
+    margin: 10px;
     padding: 5px;
     width: 100%;
 }
@@ -214,35 +213,28 @@ button {
     font-family: 'Playfair-Display';
     background-color: #4EBBB5;
     padding: 20px;
-    width: 97%;
+    width: 100%;
     font-size: x-large;
     color: white;
     border-radius: 3px;
     border-style: none;
     display: block;
-    margin: 0 auto;
+    margin: 10px;
 }
 
 legend p {
     margin: 10px;
 }
 
-.comment {
-    margin: 0 auto;
-
-}
-
 textarea {
     background-color: #EFF0F1;
     border-radius: 4px;
     border-style: none;
-    width: 97%;
+    width: 100%;
     resize: none;
     margin-top: 20px;
     height: 120px;
-    margin-left: auto;
-    margin-right: auto;
-    box-sizing: border-box;
+    overflow: hidden;
 }
 
 footer {
